[package]
name = "tta-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = { version = "1.24.1", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.23"
sqlx = {version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "offline", "macros", "decimal"]}
dotenvy = "0.15.6"
