[package]
name = "tta-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
axum = "0.6.2"
tokio = { version = "1.24.1", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.26"
sqlx = { version = "0.6.3", features = [
  "postgres",
  "runtime-tokio-rustls",
  "json",
  "chrono",
  "offline",
  "macros",
  "decimal",
] }
dotenvy = "0.15.6"
sha2 = "0.10.6"
anyhow = "1.0.71"
futures-util = "0.3.28"
tokio-stream = "0.1.14"
csv = "1.2.2"
num-traits = "0.2.15"
base64 = "0.21.2"
rust_decimal = "1.30.0"
near-sdk = "4.1.1"
near-jsonrpc-client = "0.6.0"
near-jsonrpc-primitives = "0.17.0"
near-primitives = "0.17.0"
tower-http = { version = "0.4.3", features = ["full"] }
lru = "0.11.0"
governor = "0.6.0"
tracing-loki = "0.2.4"
reqwest = "0.11.22"

[dev-dependencies]
axum-test-helper = "0.3.0"
